fix gallery image size on mobile

--- a/blocks/v2-media-with-text/v2-media-with-text.css
+++ b/blocks/v2-media-with-text/v2-media-with-text.css
@@ -164,12 +164,14 @@
 .v2-media-with-text--media-gallery .v2-media-with-text__media-section picture {
   scroll-snap-align: center;
   width: calc(100% - (var(--media-gallery-container-margin) * 2) - var(--media-gallery-gap));
+  max-width: var(--media-gallery-max-image-width);
+  aspect-ratio: 1;
   flex-shrink: 0;
 }
 
 .v2-media-with-text--media-gallery .v2-media-with-text__media-section .v2-media-with-text__media {
-  aspect-ratio: 1;
-  max-width: var(--media-gallery-max-image-width);
+  width: 100%;
+  height: 100%;
 }
 
 .v2-media-with-text--media-gallery .v2-media-with-text__content-section {
@@ -216,10 +218,6 @@
   .v2-media-with-text--media-gallery {
     --media-gallery-gap: 20px;
     --media-gallery-container-margin: 32px;
-  }
-
-  .v2-media-with-text--media-gallery .v2-media-with-text__media-section picture {
-    max-width: var(--media-gallery-max-image-width);
   }
 }
 
